enhance space and folder apis with some model updates
